# dephost

./: .gitignore  README.md  pyproject.toml  run.sh
app/: config.py  main.py  settings.py
app/common/: download_client.py  logger.py  proxy_manager.py
app/download/: client.py
app/home/static/css/: style.css
app/package/pypi/: instance.py  routes.py  service.py
app/proxy/: manager.py
app/pypi/: cache.py  index_manager.py  instance.py  package_manager.py  routes.py  schema.py  service.py  web_routes.py
app/templates/: package_detail.html
src/: config.py  main.py  settings.py
src/common/: models.py
src/download/: client.py
src/package/pypi/: instance.py  routes.py  service.py
src/proxy/: manager.py
src/static/js/: main.js
src/templates/: base.html  index.html  upload.html
tests/integration/: test_health.py  test_pypi.py
tests/scripts/: health_check.sh  test_service.py
