[tool.poetry]
name = "dephost"
version = "0.1.0"
description = "A dependency hosting and caching service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
aiohttp = "^3.9.0"
pydantic = {extras = ["email"], version = "^2.10.1"}
pydantic-settings = "^2.1.0"
aiofiles = "^23.2.0"
python-multipart = "^0.0.6"
structlog = "^24.1.0"
jinja2 = "^3.1.2"
beautifulsoup4 = "^4.12.3"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
httpx = "^0.26.0"
typer = "^0.9.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
